# github-projects-playground

./: .gitignore  README.md
Releases/: SampleProject
Sources/: CMakeLists.txt  main.cpp
